--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -12,3 +12,6 @@ collections:
   - name: community.sops
     version: 1.6.0
     type: galaxy
+  - name: ansible.posix
+    version: 1.5.1
+    type: galaxy
