--- a/ansible/roles/firefly-iii-db/vars/main.sops.yml
+++ b/ansible/roles/firefly-iii-db/vars/main.sops.yml
@@ -1,21 +1,24 @@
-db_password: ENC[AES256_GCM,data:d7kXoWv5ku0/kjKuRxIMJ8qR5NxnDlGH,iv:hEct/c/GuCQYdeN/MIYPX/PnyowiGg2JYLbAfukmSZ0=,tag:DyAu9HHU7tgk+LaSRSG2hg==,type:str]
+db_password: ENC[AES256_GCM,data:q5wKeZbcjR8o8jdK4kboihMFa+4VY4Iu,iv:hEct/c/GuCQYdeN/MIYPX/PnyowiGg2JYLbAfukmSZ0=,tag:7GitzcPLTZ3Qg+AvJCOapw==,type:str]
 sops:
     kms: []
-    gcp_kms: []
+    gcp_kms:
+        - resource_id: projects/ln-gcp-dev-sec-core-0/locations/global/keyRings/dev-global/cryptoKeys/sops
+          created_at: "2023-03-04T09:49:43Z"
+          enc: CiQARsTCbTCMJtIWGGjnspDJETWopp7BHzAn6vEy6AxBOCKfxioSSQBK6yJBaaKrim9BE+HwV2DRbqgGNfiwaztljawdXIsG75cPMu0SCWsCWzmHFq7RzQDwP5DfNIFldPLtVf6yw9JfV/mIj8RBaMw=
     azure_kv: []
     hc_vault: []
     age:
         - recipient: age1nnavshxpx6m4vm9ftltyetewedk59vmrk0d90z3zp6yl8ddtag8qc2sx4z
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0TnRycDhMVVc1UzFVWTk3
-            V2Z2NitNNXFqdHZVZkFrdDlkYXY5WVE1VUhzCm5NT1A3bWpLMkUxVk5IdlJWajQ2
-            MmlUeWRxQTdMU1VySnpCU3Vub2QvRTgKLS0tIFFRRzlvS2o5Z1FDM0ZCZ2IvcEZP
-            dDliUVZJQUhJZmhlYmMwQ3dlV2FUUkEKyh7bSIEWytsZVEiCBbzLPG58yAke8Qat
-            lGP3LXncreaa9FgtG18tjYy/AFSKsd1Lf7lrheQr3HwwsiZf5VlmQA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBubDdyZnM1QlhsK3pZcVBJ
+            TGFVdzhFTXJyaEhHaHNWRStXN09UUVVYVmlNCk1MOXRPR1FHTkRrSjl0UGJCSEVw
+            OHhtQkZFSThPZjc4UldPc1d4ZGY4OTgKLS0tIC8yT2ZUcnVrQ21zaklOUjBrU1NU
+            aWNwN3cxTVZ5ZStqSDFpeklFK2RUWlkK4qe7r2nffd5ggs8e1IMRkvPTqicDaolM
+            TDS7ICc4RpfCs65ewjZuII3j6bepPCj+VpLkbC58220WrrBnZZY93w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-04T17:03:41Z"
-    mac: ENC[AES256_GCM,data:ouW+Gm+mPlkZ8jMAwmkkV0yXgJ5liiSjjAS4e+cBV+/9La9SAFiyZz2HfrttkHxKMCFpA1gFGDmKUgFmDC9OPPSru9T5vZ4YlDYr0dRNRsWWr9BRV03ep6uy8aUElJg6EzS9kwPn1B1TnqaqF3G54B9R1LJDLaUQpvY47Fym2+Q=,iv:R5hGciUT4OguDpl3rR4GL2vqCi+VxSz6mfUX6eRKI2Y=,tag:5AWc4CCU701dA3B6wgIemg==,type:str]
+    lastmodified: "2023-03-04T09:49:44Z"
+    mac: ENC[AES256_GCM,data:6Pam5wTuE9j0KDe1ts8XuIFyAX+4IvuSGytY6XKk5R0zHWe1QG1/sSoT8wYTq8eGNehYLJpT2AEfWq6Qv34eB8b4Yon84FQ94/eL7qrHA6bKHXgetiHPn3uqbbaEWLIPK0x8WCZpzsh5TxwiqQWI3B7vvl2/sPg4uwQJ+OoOJiM=,iv:eejt4lIsm+mZOEjZIgs8CbxqsZc9KgRK/MnqLPYkqCA=,tag:Zi8OyKSsNA2FtsdNqUXYNw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
