--- a/dev/charts/firefly-iii/values.yaml
+++ b/dev/charts/firefly-iii/values.yaml
@@ -107,13 +107,13 @@ service:
   port: 80
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+  className: nginx
   annotations: {}
     # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
   hosts:
-    - chart-example.local
+    - firefly-iii.do.luknagy.com
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
