feat: add cert-manager for staging LE certificates

--- a/dev/charts/firefly-iii/stages/dev/env.yaml
+++ b/dev/charts/firefly-iii/stages/dev/env.yaml
@@ -3,3 +3,10 @@ config:
     DB_HOST: 10.0.100.2
     DB_DATABASE: firefly-iii
     DB_USERNAME: firefly-iii-user
+ingress:
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-staging"
+  tls:
+    - hosts:
+        - firefly-iii.do.luknagy.com
+      secretName: firefly-iii-tls
