feat: limit access to firefly-iii ingress ; distinguish between envs

--- a/dev/charts/firefly-iii/stages/dev/env.yaml
+++ b/dev/charts/firefly-iii/stages/dev/env.yaml
@@ -6,7 +6,9 @@ config:
 ingress:
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-staging"
+  hosts:
+    - firefly-iii-dev.do.luknagy.com
   tls:
     - hosts:
-        - firefly-iii.do.luknagy.com
+        - firefly-iii-dev.do.luknagy.com
       secretName: firefly-iii-tls
