--- a/charts/ingress-nginx/values.yaml
+++ b/charts/ingress-nginx/values.yaml
@@ -41,7 +41,8 @@ controller:
     # -- Will add custom configuration options to Nginx https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/
     config: {}
     # -- Annotations to be added to the controller config configuration configmap.
-    configAnnotations: {}
+    configAnnotations:
+        use-proxy-protocol: "true"
     # -- Will add custom headers before sending traffic to backends according to https://github.com/kubernetes/ingress-nginx/tree/main/docs/examples/customization/custom-headers
     proxySetHeaders: {}
     # -- Will add custom headers before sending response traffic to the client according to: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/#add-headers
@@ -413,7 +414,8 @@ controller:
         # Will be ignored for Kubernetes versions older than 1.20
         ##
         appProtocol: true
-        annotations: {}
+        annotations:
+            service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
         labels: {}
         # clusterIP: ""
 
