feat: add firefly-iii importer

--- a/charts/firefly-iii-importer/stages/prod/env.yaml
+++ b/charts/firefly-iii-importer/stages/prod/env.yaml
@@ -1,3 +1,3 @@
 fireflyiii:
   # -- The URL at which you access Firefly III. Check https://docs.firefly-iii.org/data-importer/install/configure/#configure-fidi to find out if you should set this.
-  vanityUrl: https://firefly-iii-dev.do.luknagy.com
+  vanityUrl: https://firefly-iii.do.luknagy.com
