--- a/charts/firefly-iii-importer/values.yaml
+++ b/charts/firefly-iii-importer/values.yaml
@@ -4,8 +4,8 @@ replicaCount: 1
 trustedProxies: "**"
 
 fireflyiii:
-  # -- The URL at which you access Firefly III. Check https://docs.firefly-iii.org/data-importer/install/configure/#configure-fidi to find out if you should set this.
-  vanityUrl: ""
+  # -- The URL at which Firefly III is available. If you change this value, click the "Reauthenticate" button on the importer after opening it!
+  url: http://core-firefly-iii:80
 
 # -- Environment variables for the importer. See docs at: https://github.com/firefly-iii/data-importer/blob/main/.env.example
 config:
@@ -19,8 +19,8 @@ config:
   env:
     IGNORE_DUPLICATE_ERRORS: "false"
     TZ: "Europe/Prague"
-    NORDIGEN_ID_FILE: /app/configurations/nordigen.txt
-    NORDIGEN_KEY_FILE: /app/configurations/nordigen.txt
+    NORDIGEN_ID_FILE: /app/configurations/nordigen-id.txt
+    NORDIGEN_KEY_FILE: /app/configurations/nordigen-key.txt
 
 # -- Configure additional mounts for the pod. Value is a list of VolumeMount specs, see https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.24/#volumemount-v1-core
 additionalVolumeMounts: []
@@ -68,9 +68,6 @@ ingress:
   #      - chart-example.local
 
 resources:
-  limits:
-    cpu: 100m
-    memory: 128Mi
   requests:
     cpu: 100m
     memory: 128Mi
