--- a/charts/firefly-iii-importer/stages/dev/secrets.yaml
+++ b/charts/firefly-iii-importer/stages/dev/secrets.yaml
@@ -4,8 +4,11 @@ fireflyiii:
 config:
     files:
         - mountPath: ENC[AES256_GCM,data:d6Em8LYbmd0aiGMBX4Y/u7Yo+Q==,iv:YpQmOVfrpg9yUjha+POAQTAdawRC0BqCsphJcGWt0Xg=,tag:9kf3g6WG9XfCWWKlzfCocg==,type:str]
-          name: ENC[AES256_GCM,data:abznU4x9pVvYyrvB,iv:43jDJ1x/IB/O0G1ZgbtK91AuaNjPo3bksg4iklp/zq8=,tag:j2/Zu5OcJwcKyFEBU1UYBg==,type:str]
-          content: ENC[AES256_GCM,data:s8yjnHLs08Z84vwqVqPGB8FTaKz4YBVP24pdA/k8dM96DYJ7QBstbT9tvng8zfJvpMxL0olwCIrJPvvYpKPc5ZI3db4su96nOJBKyqR79DuETxlJUjRyBJOcYAruuTu23nv6vDX7oeN/QdM+YpNQSSIOs3NGazBQehgbhk8JTOvEfe11Ypc4M1jQ+n87jIU/y57nO6B7GpHOqdf1MffuyVHCQt3OYaU1bMK+6F0iwh1vEV/MQZDES2UzLgcsaM8=,iv:u2IyyN6wqKLBUB88XxKsm1ZIGqql2WtB2SPnLQ2OahM=,tag:XUvaObiMmSlLaez6roiYYQ==,type:str]
+          name: ENC[AES256_GCM,data:JdZKrvbq/uc6+Zj1FmAl,iv:WyPyIxfbcRGOvSCPhPHBJDaBPuheYxFrLZeqKnxIjCE=,tag:JXgBFbQvQCqh8ZXEyga83w==,type:str]
+          content: ENC[AES256_GCM,data:XI9V1td1mhFfjbh6xsabAM7wRCIk9zZiYeEdWxreGwzrOPvj,iv:Civ03UnaEig3hlRI09bvVQQ6H40/X8m0FDDR59RpkRI=,tag:CfFTjhE2RZiH6yRpVx+tXA==,type:str]
+        - mountPath: ENC[AES256_GCM,data:d6Em8LYbmd0aiGMBX4Y/u7Yo+Q==,iv:YpQmOVfrpg9yUjha+POAQTAdawRC0BqCsphJcGWt0Xg=,tag:9kf3g6WG9XfCWWKlzfCocg==,type:str]
+          name: ENC[AES256_GCM,data:cHf/TpEZa63HCAqapxqxDw==,iv:LdMHBHZU0s5G85QMY9sQ7T/54sk2uh+gBBZD3oXERPQ=,tag:nb/F1W/YSTuvKmExO0NPsQ==,type:str]
+          content: ENC[AES256_GCM,data:bmQ2h5+kVkIOMt7bkHNKfyiBWuBl52tiOkH6WWrb8/F91aMdIDezHS1eu0FANWzBs5IxTukJB8B4NcKiAijpi58E4VbB0WH/fhDd33BB+LF87iudDWW9veOr+z0UpD/ENlAnn/G8Jrr9jVjB2lsvX/CAxl4RHYE=,iv:FDOAzRvvE33n2zZSNglQBaVUDk2hHejYeeR1yWBueWo=,tag:Ha89xkiPwpjT9hfAJtSCIQ==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -15,8 +18,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-03-05T09:09:26Z"
-    mac: ENC[AES256_GCM,data:6VEfJ/BomiPGlQKePxCFEBZ7631qZE5SBje5XLIO3TUjeGmCQqY37wYzrs1VvrgjXTVtvxkEFCGG/v0Za9JG2BBJT12OBqtMnuMd9oKjAmG9jh677lltOtoF87cgZ3aCAzxwtb0GsqB0rDNTKlY/Ij+iNn5Ly2xp22/D8HXWZaE=,iv:4JWHh7WlfeDb58cPdsV15wB3oxv5xk04nd9y6it9dDc=,tag:Y8awaxXpxro/c+SimBatqA==,type:str]
+    lastmodified: "2023-03-26T12:32:24Z"
+    mac: ENC[AES256_GCM,data:eN+80oSEoAj9h7Ta2kvjTVI8qPH6o7sb29cMulnxY8xG0fgfJDJoFbvlbS7Zx+Blw5Yp79oQm80A1t9fcO6WIfgq/YujX9S88hIE3+x1yie2ZNnojlA5pSPCqRmzI3XZhV6sTsNoJyxFwv2SRHSgcGl3W5knHHEZuZikWYn2gaE=,iv:+PcNvdJEpD5JGa366fN4lrNFXF0TWMCAjdzhYlaRFMg=,tag:mt5ED2e78lasZCurChZRFA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
