--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,7 +9,8 @@ jobs:
         with:
           go-version: 1.20
       - uses: actions/checkout@v3
-      - uses: google-github-actions/auth@v1
+      - uses: 'google-github-actions/auth@v1'
+        id: 'auth'
         with:
           workload_identity_provider: 'projects/820161525709/locations/global/workloadIdentityPools/selfhoster-gh/providers/selfhoster-gh-prvdr'
           service_account: 'tf-state@ln-gcp-sh-infra-prod.iam.gserviceaccount.com'
