fix: missing GH actions permissions
https://stackoverflow.com/a/73626864/5314412

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,6 +3,9 @@ on:
   - workflow_dispatch
 jobs:
   terragrunt-plan:
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v4
