--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,10 +8,10 @@ jobs:
       id-token: 'write'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20
-      - uses: actions/checkout@v3
+          go-version-file: "go.mod"
       - uses: 'google-github-actions/auth@v1'
         id: 'auth'
         with:
