feat: create token directly for auth
as I don't use intermediary service account, create the token directly in pipeline

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,6 +1,7 @@
 name: 'Spin up infrastructure via Terragrunt'
 on:
   - workflow_dispatch
+  - push
 jobs:
   terragrunt-plan:
     permissions:
@@ -15,7 +16,9 @@ jobs:
       - uses: 'google-github-actions/auth@v1'
         id: 'auth'
         with:
+          token_format: "access_token"
           workload_identity_provider: 'projects/820161525709/locations/global/workloadIdentityPools/selfhoster-gh-v2/providers/selfhoster-gh-prvdr-v2'
           service_account: 'tf-state@ln-gcp-sh-infra-prod.iam.gserviceaccount.com'
+          access_token_lifetime: 600s
       - name: Run Dagger.io pipeline
         run: go run ci/main.go
