--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           token_format: "access_token"
           workload_identity_provider: 'projects/820161525709/locations/global/workloadIdentityPools/selfhoster-gh-v2/providers/selfhoster-gh-prvdr-v2'
-          service_account: 'tf-state@ln-gcp-sh-infra-prod.iam.gserviceaccount.com'
+          service_account: 'sh-infra-cicd-prod@ln-gcp-wi-sec-0.iam.gserviceaccount.com'
           access_token_lifetime: 600s
       - name: Run Dagger.io pipeline
         run: go run ci/main.go
