dagger ci tgrunt (#3)
* fix: add id to google auth

* fix: missing GH actions permissions

https://stackoverflow.com/a/73626864/5314412

* fix: proper Go version from Go Mod file

* feat: pass Google env variable to container

* fix: mount Google credentials from host to container

* fix: use root of host directory instead of $PWD

there is problem mounting the files in the container, maybe this will fix it?

* fix: path to credentials from github runner host system

* fix: try different path to credentials

* fix: try different entrypoint for pwd

* fix: try different entrypoint for pwd

* fix: use new WI pool

* feat: print content of credentials file for debugging

* feat: create token directly for auth

as I don't use intermediary service account, create the token directly in pipeline

* fix: use new SA for WI

* chore: remove access_token generation

this was to verify if WIP pool works

* fix: try direct usage of account without impersonation

* fix: try direct impersonation without workload identity user

* fix: handle state differently for env

Workload Identity doesn't work correctly with impersonation.

* feat: load DO_TOKEN from SOPS, run tgrunt plan

* feat: fix path to secret

* feat: fix sops decryption

* debug: add more descriptive errors in SOPS

* feat: test apply + destroy plan in pipeline

* fix: add non-interactive flag to apply

* fix: use new version of modules for volumes

to avoid recreate of volume in terragrunt runs

* feat: make workflow manual only and pick action

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,17 +1,27 @@
 name: 'Spin up infrastructure via Terragrunt'
 on:
-  - workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      terragruntAction:
+        description: 'Action to take when invoking Terragrunt'
+        required: true
+        default: 'apply'
 jobs:
   terragrunt-plan:
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20
-      - uses: actions/checkout@v3
-      - uses: google-github-actions/auth@v1
+          go-version-file: "go.mod"
+      - uses: 'google-github-actions/auth@v1'
+        id: 'auth'
         with:
-          workload_identity_provider: 'projects/820161525709/locations/global/workloadIdentityPools/selfhoster-gh/providers/selfhoster-gh-prvdr'
+          workload_identity_provider: 'projects/820161525709/locations/global/workloadIdentityPools/selfhoster-gh-v2/providers/selfhoster-gh-prvdr-v2'
           service_account: 'tf-state@ln-gcp-sh-infra-prod.iam.gserviceaccount.com'
+          access_token_lifetime: 600s
       - name: Run Dagger.io pipeline
-        run: go run ci/main.go
+        run: go run ci/main.go "${{ github.event.inputs.terragruntAction }}"
