--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,7 +22,8 @@ jobs:
         with:
           workload_identity_provider: 'projects/820161525709/locations/global/workloadIdentityPools/selfhoster-gh-v2/providers/selfhoster-gh-prvdr-v2'
           service_account: 'selfhoster-infra-live-cicd@ln-gcp-wi-sec-0.iam.gserviceaccount.com'
-
+          delegates:
+            'tf-state@ln-gcp-sh-infra-prod.iam.gserviceaccount.com'
           access_token_lifetime: 600s
       - name: Run Dagger.io pipeline
         run: go run ci/main.go "${{ github.event.inputs.terragruntAction }}"
