--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,2 +1,14 @@
 ansible-core==2.14.1
+cffi==1.15.1
+cryptography==39.0.0
+Jinja2==3.1.2
+jmespath==1.0.1
+MarkupSafe==2.1.1
+packaging==22.0
+psycopg-binary==3.1.8
+psycopg-pool==3.1.6
 psycopg2-binary==2.9.5
+pycparser==2.21
+PyYAML==6.0
+resolvelib==0.8.1
+typing_extensions==4.4.0
