fix: rename binary
conflict with directory

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,11 +23,12 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version-file: "./ci/go.mod"
+          cache-dependencies-path: "./ci/go.sum"
       - name: Install dependencies
         run: go get .
         working-directory: "./ci"
       - name: Build CI binary
-        run: go build -o ../ci
+        run: go build -o dagger-ci
         working-directory: "./ci"
       - name: Run CI job
-        run: ./ci "${{ github.event.inputs.terragruntAction }}"
+        run: ./ci/dagger-ci "${{ github.event.inputs.terragruntAction }}"
